First row of numbers

--- a/calculator.html
+++ b/calculator.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Calculator</title>
-  </head>
-  <body>
-    <form name="calculator">
-      <table>
-
-      </table>
-    </form>
-  </body>
-</html>
+<head>
+  <meta charset="utf-8">
+  <title>Calculator</title>
+</head>
+<body>
+  <form name="calculator">
+    <table>
+      <tr>
+        <td><button type="button" value="1">1</td>
+          <td><button type="button" value="2">2</td>
+            <td><button type="button" value="3">3</td>
+              <td><button type="button" value="+">+</td>
+              </tr>
+            </table>
+          </form>
+        </body>
+        </html>
