--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,11 @@
     <form name="calculator">
       <table>
         <tr>
+          <td colspan="4">
+            <input type="text" disabled>
+          </td>
+        </tr>
+        <tr>
           <td><button type="button" value="1">1</td>
           <td><button type="button" value="2">2</td>
           <td><button type="button" value="3">3</td>
