--- a/calculator.html
+++ b/calculator.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="style.css" rel="stylesheet" />
     <title>Calculator</title>
   </head>
   <body>
