--- a/calculator.html
+++ b/calculator.html
@@ -14,26 +14,26 @@
           </td>
         </tr>
         <tr>
-          <td><button type="button" value="1">1</td>
-          <td><button type="button" value="2">2</td>
-          <td><button type="button" value="3">3</td>
+          <td><button class="box" type="button" value="1">1</td>
+          <td><button class="box" type="button" value="2">2</td>
+          <td><button class="box" type="button" value="3">3</td>
           <td><button type="button" value="+">+</td>
         </tr>
         <tr>
-          <td><button type="button" value="4">4</td>
-          <td><button type="button" value="5">5</td>
-          <td><button type="button" value="6">6</td>
+          <td><button class="box" type="button" value="4">4</td>
+          <td><button class="box" type="button" value="5">5</td>
+          <td><button class="box" type="button" value="6">6</td>
           <td><button type="button" value="-">-</td>
         </tr>
         <tr>
-          <td><button type="button" name="seven" value="7">7</td>
-          <td><button type="button" name="eight" value="8">8</td>
-          <td><button type="button" name="nine" value="9">9</td>
+          <td><button class="box" type="button" name="seven" value="7">7</td>
+          <td><button class="box" type="button" name="eight" value="8">8</td>
+          <td><button class="box" type="button" name="nine" value="9">9</td>
           <td><button type="button" value="*">x</td>
         </tr>
         <tr>
           <td><button type="button" value="c">C</td>
-          <td><button type="button" value="0">0</td>
+          <td><button class="box" type="button" value="0">0</td>
           <td><button type="button" value="=">=</td>
           <td><button type="button" value="/">/</td>
         </tr>
