Create class .clear to style the clear button

--- a/calculator.html
+++ b/calculator.html
@@ -32,7 +32,7 @@
           <td><button class="operator" type="button" value="*">x</td>
         </tr>
         <tr>
-          <td><button type="button" value="c">C</td>
+          <td><button class="clear" type="button" value="c">C</td>
           <td><button class="box" type="button" value="0">0</td>
           <td><button type="button" value="=">=</td>
           <td><button class="operator" type="button" value="/">/</td>
