--- a/calculator.html
+++ b/calculator.html
@@ -34,7 +34,7 @@
         <tr>
           <td><button class="clear" type="button" value="c">C</td>
           <td><button class="box" type="button" value="0">0</td>
-          <td><button type="button" value="=">=</td>
+          <td><button class="equal" type="button" value="=">=</td>
           <td><button class="operator" type="button" value="/">/</td>
         </tr>
       </table>
