Create - id display - to display the value of the button when its clicked. Adjust the logic for equal button

--- a/calculator.html
+++ b/calculator.html
@@ -10,32 +10,32 @@
       <table>
         <tr>
           <td colspan="4">
-            <input type="text" disabled>
+            <input type="text" id="display" disabled>
           </td>
         </tr>
         <tr>
-          <td><button class="box" type="button" value="1">1</td>
-          <td><button class="box" type="button" value="2">2</td>
-          <td><button class="box" type="button" value="3">3</td>
-          <td><button class="operator" type="button" value="+">+</td>
+          <td><button class="box" type="button" value="1" onclick="calculator.display.value += '1'">1</td>
+          <td><button class="box" type="button" value="2" onclick="calculator.display.value += '2'">2</td>
+          <td><button class="box" type="button" value="3" onclick="calculator.display.value += '3'">3</td>
+          <td><button class="operator" type="button" value="+" onclick="calculator.display.value += '+'">+</td>
         </tr>
         <tr>
-          <td><button class="box" type="button" value="4">4</td>
-          <td><button class="box" type="button" value="5">5</td>
-          <td><button class="box" type="button" value="6">6</td>
-          <td><button class="operator" type="button" value="-">-</td>
+          <td><button class="box" type="button" value="4" onclick="calculator.display.value += '4'">4</td>
+          <td><button class="box" type="button" value="5" onclick="calculator.display.value += '5'">5</td>
+          <td><button class="box" type="button" value="6" onclick="calculator.display.value += '6'">6</td>
+          <td><button class="operator" type="button" value="-" onclick="calculator.display.value += '-'">-</td>
         </tr>
         <tr>
-          <td><button class="box" type="button" name="seven" value="7">7</td>
-          <td><button class="box" type="button" name="eight" value="8">8</td>
-          <td><button class="box" type="button" name="nine" value="9">9</td>
-          <td><button class="operator" type="button" value="*">x</td>
+          <td><button class="box" type="button" name="seven" value="7" onclick="calculator.display.value += '7'">7</td>
+          <td><button class="box" type="button" name="eight" value="8" onclick="calculator.display.value += '8'">8</td>
+          <td><button class="box" type="button" name="nine" value="9" onclick="calculator.display.value += '9'">9</td>
+          <td><button class="operator" type="button" value="x" onclick="calculator.display.value += '*'">x</td>
         </tr>
         <tr>
-          <td><button class="clear" type="button" value="c">C</td>
-          <td><button class="box" type="button" value="0">0</td>
-          <td><button class="equal" type="button" value="=">=</td>
-          <td><button class="operator" type="button" value="/">/</td>
+          <td><button class="clear" type="button" value="c" onclick="calculator.display.value = ''">C</td>
+          <td><button class="box" type="button" value="0" onclick="calculator.display.value += '0'">0</td>
+          <td><button class="equal" type="button" value="=" onclick="calculator.display.value = eval(calculator.display.value)">=</td>
+          <td><button class="operator" type="button" value="/" onclick="calculator.display.value += '/'">/</td>
         </tr>
       </table>
     </form>
